[gd_scene load_steps=8 format=3 uid="uid://h372ny4x2wrf"]

[ext_resource type="Texture2D" uid="uid://ckd2t3c4af364" path="res://assets/kenney-input-promts/mouse_left.png" id="1_5m1iv"]
[ext_resource type="Script" uid="uid://t7i11ingq3cp" path="res://menus/tutorial.gd" id="1_kac62"]
[ext_resource type="Texture2D" uid="uid://bmblrjlsrpip" path="res://assets/kenney-input-promts/keyboard_space.png" id="2_kac62"]
[ext_resource type="Texture2D" uid="uid://dllqubq7rj78y" path="res://assets/kenney-input-promts/mouse_scroll_vertical.png" id="3_pke52"]
[ext_resource type="Texture2D" uid="uid://dwvx31e7jjcmo" path="res://assets/kenney-input-promts/mouse_right.png" id="4_k0vit"]
[ext_resource type="Texture2D" uid="uid://dlv34swirkb0p" path="res://assets/kenney-input-promts/keyboard_p.png" id="5_8rou5"]
[ext_resource type="Texture2D" uid="uid://buf5pove2ydpo" path="res://assets/kenney-input-promts/mouse_scroll.png" id="6_a4kt4"]

[node name="Tutorial" type="CanvasLayer"]
script = ExtResource("1_kac62")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.5
offset_top = -64.0
offset_right = 140.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="SelectTile" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SelectTile"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Select tile"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/SelectTile"]
layout_mode = 2
texture = ExtResource("1_5m1iv")

[node name="RotateTile" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/RotateTile"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 32
text = "Rotate tile"

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/RotateTile"]
layout_mode = 2
texture = ExtResource("2_kac62")

[node name="Label2" type="Label" parent="VBoxContainer/RotateTile"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "or"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/RotateTile"]
layout_mode = 2
texture = ExtResource("3_pke52")

[node name="ReturnTile" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ReturnTile"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Return tile"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ReturnTile"]
layout_mode = 2
texture = ExtResource("4_k0vit")

[node name="Pass" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Pass"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Pass turn"

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/Pass"]
layout_mode = 2
texture = ExtResource("5_8rou5")

[node name="Label2" type="Label" parent="VBoxContainer/Pass"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "or"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Pass"]
layout_mode = 2
texture = ExtResource("6_a4kt4")

[node name="OtherPlayers" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/OtherPlayers"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Other players will try to control as much of the board a possible"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PlaceTile" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/PlaceTile"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Place tile"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PlaceTile"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_5m1iv")

[node name="PlaceTileNote" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PlaceTileNote"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "You must place your tiles next to each other and they must form a link"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ThatsIt" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/ThatsIt"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "That's it!
Click anywhere to return to the menu"
horizontal_alignment = 1
